--- a/web/index.html
+++ b/web/index.html
@@ -14,8 +14,12 @@
 </head>
 
 <body>
-
-  <div id="output"></div>
-
+  <main>
+    <header>Australia Simulator!</header>
+    <aus-house id="world">
+    </aus-house>
+    <aus-character id="character"/>
+  </main>
+  <input-overlay id="input" class="active"/>
 </body>
 </html>
