Some input additions

--- a/web/index.html
+++ b/web/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta name="scaffolded-by" content="https://github.com/google/stagehand">
     <title>Australia Simulator!</title>
     <link rel="stylesheet" href="styles.css">
@@ -17,8 +17,8 @@
   <main>
     <header>Australia Simulator!</header>
     <aus-house id="world">
+        <aus-actor id="character"/>
     </aus-house>
-    <aus-character id="character"/>
   </main>
   <input-overlay id="input" class="active"/>
 </body>
