Added view reset and setup methods and basic movement.

--- a/web/index.html
+++ b/web/index.html
@@ -16,10 +16,9 @@
 <body>
   <main>
     <header>Australia Simulator!</header>
-    <aus-house id="world">
-        <aus-actor id="character"/>
-    </aus-house>
+    <section id="game">
+    </section>
   </main>
-  <input-overlay id="input" class="active"/>
+  <aside id="input" class="active"/>
 </body>
 </html>
