Small prototype refinings

--- a/web/index.html
+++ b/web/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <main>
-    <header>Australia Simulator!</header>
+    <header id="header">Australia Simulator!</header>
     <section id="game">
     </section>
   </main>
