--- a/web/index.html
+++ b/web/index.html
@@ -14,11 +14,16 @@
 </head>
 
 <body>
-  <main>
-    <header id="header">Australia Simulator!</header>
-    <section id="game">
+  <main id="main">
+    <section class="layer" id="menuLayer">
+      <header>Australia Simulator!</header>
+      <nav>
+        <button class="btn" id="startGame">ENTER!</button>
+      </nav>
+    </section>
+    <section class="layer hidden" id="gameLayer">
     </section>
   </main>
-  <aside id="input"/>
+  <aside class="layer hidden" id="inputLayer"/>
 </body>
 </html>
