Fixed stop of game on gameover. Made obstacle more rectangular.

--- a/web/index.html
+++ b/web/index.html
@@ -24,6 +24,6 @@
     <section class="layer hidden" id="gameLayer">
     </section>
   </main>
-  <aside class="layer hidden" id="inputLayer"/>
+  <aside class="layer" id="inputLayer"/>
 </body>
 </html>
