Fixed inputLayer not being on the front. Changed movement system to originate from the first touch. Added knob to visualize first touch. Commented out all actors except character for testing.

--- a/web/index.html
+++ b/web/index.html
@@ -24,6 +24,8 @@
     <section class="layer hidden" id="gameLayer">
     </section>
   </main>
-  <aside class="layer" id="inputLayer"/>
+  <aside class="layer" id="inputLayer">
+    <div id="inputKnob" />
+  </aside>
 </body>
 </html>
