Removed gyroSensor for now.

--- a/web/index.html
+++ b/web/index.html
@@ -23,12 +23,12 @@
       <nav id="menu">
         <button class="btn" id="startGame">ENTER!</button>
         <button class="btn hidden" id="selectLevel">Select Level</button>
-        <button class="btn" id="useGyrosensor">
+        <!--<button class="btn" id="useGyrosensor">
           <div class="checkbox">
             <i class="fa fa-check"></i>
           </div>
           Use Gyrosensor?
-        </button>
+        </button>-->
       </nav>
     </section>
     <section class="layer hidden" id="gameLayer">
