--- a/web/index.html
+++ b/web/index.html
@@ -30,6 +30,9 @@
           Use Gyrosensor?
         </button>-->
       </nav>
+      <nav id="levelSelection" class="hidden">
+        <button class="btn" id="showMenu">Back</button>
+      </nav>
     </section>
     <section class="layer hidden" id="gameLayer">
     </section>
